# arduino-uno-r4-wifi-example00

./: .gitignore  Cargo.toml  help.py  help1.py  help2.py  main.rs  memo  mod.rs  pins.py
.cargo/: config.toml
src/: led_matrix.rs  main.rs  sci.rs
