[package]
authors = ["Tom-game-project <tom.ipynb@gmail.com>"]
name = "arduino-uno-r4-wifi-example00"
edition = "2021"
version = "0.1.0"

[features]
rtt = [ "rtt-target", "panic-rtt-target" ]

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"], optional = true }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"], optional = true }
ra4m1 = { git = "https://github.com/ra-rs/ra.git" }

[profile.release]
debug = 2
